# rs-retrieval

./: Cargo.toml  download.py
src/: bm25.rs  io.rs  io_utils.rs  main.rs
test/: test.py
