[package]
name = "rs-retrieval"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokenizers = "0.15.1"
prost = "0.12"
rayon = "*"
counter = "*"
mecab = "*"
